--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           
         </ul>
     </div> 
-        <div > {{valor}}</div>
+    <div>{{ valor.sort( compare )}}</div>
+    <div>{{}}</div>
     </main>
 
     <script src="app.js" charset="utf-8"></script>
